--- a/charts/envoy-edge/templates/deployment.yaml
+++ b/charts/envoy-edge/templates/deployment.yaml
@@ -20,6 +20,8 @@ spec:
       labels:
         {{- include "envoy-edge.selectorLabels" . | nindent 8 }}
     spec:
+      strategy:
+        type: Recreate
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
